--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
   <link rel="stylesheet" href="reveal.js/css/reset.css">
   <link rel="stylesheet" href="reveal.js/css/reveal.css">
   <style>
-    code{white-space: pre-wrap;}
-    span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
-    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
+      code{white-space: pre-wrap;}
+      span.smallcaps{font-variant: small-caps;}
+      span.underline{text-decoration: underline;}
+      div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
   <link rel="stylesheet" href="reveal.js/css/theme/black.css" id="theme">
   <!-- Printing and PDF exports -->
@@ -73,7 +71,7 @@
 </ul>
 </section>
 <section id="section-3" class="slide level1" data-background="images/sars_cov_2.jpg">
-<h1 data-background="images/sars_cov_2.jpg"></h1>
+<h1></h1>
 <ul>
 <li>SARS-CoV-2 is a large RNA virus (approximately 120 nm in diameter) from a family of viruses called coronaviruses.</li>
 <li>Corona means crown; it’s called coronavirus because the virus is spherical and has spikes which look like a crown when viewed down an electron microscope.</li>
@@ -108,7 +106,7 @@
 </ul>
 </section>
 <section id="section-8" class="slide level1" data-background="images/uk_cases_john_hopkins.png">
-<h1 data-background="images/uk_cases_john_hopkins.png"></h1>
+<h1></h1>
 <p><a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6">screenshot from John Hopkins COVID-19 dashboard</a></p>
 </section>
 <section id="section-9" class="slide level1">
@@ -182,7 +180,7 @@
 </ul>
 </section>
 <section id="section-19" class="slide level1" data-background="images/covid_cxrs.png">
-<h1 data-background="images/covid_cxrs.png"></h1>
+<h1></h1>
 </section>
 <section id="section-20" class="slide level1">
 <h1></h1>
@@ -200,7 +198,7 @@
 <h1></h1>
 <ul>
 <li>Important to isolate patient and take <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/874411/When_to_use_face_mask_or_FFP3.pdf">appropriate respiratory precautions</a></li>
-<li>Basic PPE for all suspected cases (surgical mask, gloves and apron); respirator (FFP3) mask, visor/goggles if aerosol generating procedures (e.g. intubation, non-invasive ventilation, chest physiotherapy, tracheostomy care, bronchoscopy)</li>
+<li>Basic PPE for all suspected cases (surgical mask, gloves and apron); respirator (FFP3) mask, visor/goggles if aerosol generating procedures/high risk environments (e.g. intubation, non-invasive ventilation, chest physiotherapy, tracheostomy care, bronchoscopy)</li>
 </ul>
 </section>
 <section id="section-23" class="slide level1">
