--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <h1></h1>
 <ul>
 <li>Droplet (dominant means of transmission, can’t travel more than 1m, can persist on surfaces, surgical mask helpful).</li>
-<li><a href="https://wwwnc.cdc.gov/eid/article/26/6/20-0412_article">Aerosol</a> (<a href="https://www.nejm.org/doi/10.1056/NEJMc2004973">uncertain how important this mode of transmission is</a>, can travel more than 1m, surgical mask not helpful).</li>
+<li>Aerosol (<a href="https://www.who.int/news-room/commentaries/detail/modes-of-transmission-of-virus-causing-covid-19-implications-for-ipc-precaution-recommendations">WHO currently think not an important route</a> can travel more than 1m, surgical mask not helpful).</li>
 <li>Social distancing, hand hygiene, and in a hospital setting <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/874411/When_to_use_face_mask_or_FFP3.pdf">appropriate use of PPE</a> are important.</li>
 </ul>
 </section>
